Vlc.DotNet/Core/Interop/InteropMethods.cs


        #region internal static extern void libvlc_vlm_set_input(IntPtr p_instance, string psz_name, string psz_input, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="psz_input"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_vlm_set_input(IntPtr p_instance, string psz_name, string psz_input, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_vlm_add_input(IntPtr p_instance, string psz_name, string psz_input, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="psz_input"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_vlm_add_input(IntPtr p_instance, string psz_name, string psz_input, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_vlm_set_loop(IntPtr p_instance, string psz_name, bool b_loop, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="b_loop"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_vlm_set_loop(IntPtr p_instance, string psz_name, bool b_loop, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_vlm_set_mux(IntPtr p_instancep_instance, string psz_name, string psz_mux, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instancep_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="psz_mux"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_vlm_set_mux(IntPtr p_instancep_instance, string psz_name, string psz_mux, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_vlm_change_media(IntPtr p_instance , string psz_name , string psz_input , string psz_output , int i_options , [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)]string[] ppsz_options , bool b_enabled , bool b_loop , ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="psz_input"></param>
        /// <param name="psz_output"></param>
        /// <param name="i_options"></param>
        /// <param name="ppsz_options"></param>
        /// <param name="b_enabled"></param>
        /// <param name="b_loop"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_vlm_change_media(IntPtr p_instance
                                                            , string psz_name
                                                            , string psz_input
                                                            , string psz_output
                                                            , int i_options
                                                            , [MarshalAs(UnmanagedType.LPArray, ArraySubType = UnmanagedType.LPStr)] string[] ppsz_options
                                                            , bool b_enabled
                                                            , bool b_loop
                                                            , ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_vlm_play_media(IntPtr p_instance, string psz_name, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_vlm_play_media(IntPtr p_instance, string psz_name, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_vlm_stop_media(IntPtr p_instance, string psz_name, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_vlm_stop_media(IntPtr p_instance, string psz_name, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_vlm_pause_media(IntPtr p_instance, string psz_name, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_vlm_pause_media(IntPtr p_instance, string psz_name, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern void libvlc_vlm_seek_media(IntPtr p_instance, string psz_name, float f_percentage, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="f_percentage"></param>
        /// <param name="p_exception"></param>
        [DllImport("libvlc")]
        internal static extern void libvlc_vlm_seek_media(IntPtr p_instance, string psz_name, float f_percentage, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern string libvlc_vlm_show_media(IntPtr p_instance, string psz_name, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern string libvlc_vlm_show_media(IntPtr p_instance, string psz_name, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern float libvlc_vlm_get_media_instance_position(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="i_instance"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern float libvlc_vlm_get_media_instance_position(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern int libvlc_vlm_get_media_instance_time(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="i_instance"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern int libvlc_vlm_get_media_instance_time(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern int libvlc_vlm_get_media_instance_length(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="i_instance"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern int libvlc_vlm_get_media_instance_length(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern int libvlc_vlm_get_media_instance_rate(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="i_instance"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern int libvlc_vlm_get_media_instance_rate(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern int libvlc_vlm_get_media_instance_title(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="i_instance"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern int libvlc_vlm_get_media_instance_title(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern int libvlc_vlm_get_media_instance_chapter(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="i_instance"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern int libvlc_vlm_get_media_instance_chapter(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception);

        #endregion

        #region internal static extern bool libvlc_vlm_get_media_instance_seekable(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception)

        /// <summary>
        /// 
        /// </summary>
        /// <param name="p_instance"></param>
        /// <param name="psz_name"></param>
        /// <param name="i_instance"></param>
        /// <param name="p_exception"></param>
        /// <returns></returns>
        [DllImport("libvlc")]
        internal static extern bool libvlc_vlm_get_media_instance_seekable(IntPtr p_instance, string psz_name, int i_instance, ref libvlc_exception_t p_exception);

        #endregion

        #endregion

        [DllImport("plugins\\libd3dimage_plugin.dll")]
        internal static extern IntPtr libd3d_surface_changed_callback(D3dCallback f_callback);
    }
}